# idolapsoserv

./: .gitignore  .travis.yml  Cargo.toml  README.md
bbproxy/: Cargo.toml  bbproxy.toml
bbproxy/src/: config.rs  main.rs  util.rs
data/default/: idola_local.toml  monolith_config_default.toml  patch_config_default.toml
data/param/: ItemPT.gsl  ItemRT.gsl
psocrypto/: Cargo.toml
psocrypto/src/: lib.rs  pc.rs
psocrypto/src/bb/: mod.rs  table.rs
psodata/: Cargo.toml
psodata/src/: battleparam.rs  bb_defaults.rs  chara.rs  itempt.rs  itemrt.rs  leveltable.rs  lib.rs  map.rs
psodata/src/gsl/: decompress.rs  mod.rs
psodata/src/prs/: compress.rs  decompress.rs  mod.rs
psodb_common/: Cargo.toml
psodb_common/src/: account.rs  error.rs  lib.rs  pool.rs
psodb_sqlite/: Cargo.toml
psodb_sqlite/src/: lib.rs  schema.rs  test.rs
psomsg/: Cargo.toml
psomsg/src/: bb.rs  common.rs  lib.rs  patch.rs  serial.rs  staticvec.rs  util.rs
psomsg/src/bb/: chara.rs  data.rs  default_config.rs  lobby.rs  mod.rs  msgs.rs  player.rs
psomsg_bb/: Cargo.toml
psomsg_bb/src/: chara.rs  data.rs  default_config.rs  game.rs  lib.rs  lobby.rs  msgs.rs  player.rs
psomsg_bb/src/subcmd/: mod.rs  sub62.rs  sub6d.rs  wrapper.rs
psomsg_common/: Cargo.toml
psomsg_common/src/: lib.rs  util.rs
psomsg_patch/: Cargo.toml
psomsg_patch/src/: lib.rs
psoserial/: Cargo.toml
psoserial/src/: lib.rs  util.rs
src/: args.rs  context.rs  game.rs  lib.rs  main.rs  maps.rs  util.rs
src/bb/: mod.rs
src/block/: client.rs  handler.rs  mod.rs
src/block/lobbyhandler/: error.rs  event.rs  mod.rs
src/block/partyhandler/: enemygen.rs  error.rs  mod.rs
src/config/: mod.rs
src/data/: mod.rs
src/db/: account.rs  error.rs  mod.rs  pool.rs  sqlite.rs
src/db/sqlite/: mod.rs  schema.rs  test.rs
src/droptables/: mod.rs
src/login/: bb.rs  mod.rs  paramfiles.rs
src/login/bb/: client.rs  def_inventory.rs  handler.rs  mod.rs
src/loop_handler/: mod.rs
src/maps/: ep1.rs  ep2.rs  ep4.rs  mod.rs
src/message/: mod.rs  patch.rs
src/message/bb/: mod.rs
src/patch/: mod.rs
src/services/: client.rs  message.rs  mod.rs  patch.rs
src/services/client/: bb.rs  mod.rs  patch.rs  shipgate.rs
src/ship/: client.rs  error.rs  handler.rs  mod.rs
src/shipgate/: client.rs  handler.rs  mod.rs  msg.rs
src/shipgate/client/: callbacks.rs  mod.rs
src/util/: mod.rs  nsc.rs
staticvec/: Cargo.toml
staticvec/src/: lib.rs
tokiomode/: Cargo.toml
tokiomode/src/: main.rs
