[package]
name = "idola"
version = "0.1.0"
authors = ["Eidolon"]

[dependencies]
psocrypto = { path = "psocrypto" }
psomsg = { path = "psomsg" }
psodata = { path = "psodata" }
rand = "~0.3"
byteorder = "~0.4"
rustc-serialize = "~0.3"
encoding = "~0.2"
log = "~0.3"
env_logger = "~0.3"
typenum = "~1.1"
toml = "~0.1"
docopt = "~0.6"
rusqlite = "~0.5"
rust-crypto = "~0.2"
crc = "1.2"

[[bin]]
name = "idola_patch"

[[bin]]
name = "idola_login"

[[bin]]
name = "idola_ship"

[[bin]]
name = "idola_data"

[[bin]]
name = "idola_monolith"
