[package]
name = "bbproxy"
version = "0.1.0"
authors = ["Eidolon"]

[dependencies]
psoserial = { path = "../psoserial" }
psomsg = { path = "../psomsg" }
psomsg_common = { path = "../psomsg_common" }
psocrypto = { path = "../psocrypto" }
staticvec = { path = "../staticvec" }
rand = "0.3"
byteorder = "0.4"
rustc-serialize = "0.3"
encoding = "0.2"
log = "0.3"
env_logger = "0.3"
typenum = "1.1"
toml = "0.1"
docopt = "0.6"
crc = "1.2"
