[package]
name = "psomsg"
version = "0.1.0"
authors = ["Eidolon"]

[dependencies]
byteorder = "~0.4"
encoding = "~0.2"
log = "~0.3"
psoserial = { path = "../psoserial" }
staticvec = { path = "../staticvec" }
typenum = "~1.1"
psomsg_common = { path = "../psomsg_common" }
psomsg_patch = { path = "../psomsg_patch" }
psomsg_bb = { path = "../psomsg_bb" }
