[package]
name = "tokiomode"
version = "0.1.0"
authors = ["Eidolon"]

[dependencies]
psocrypto = { path = "../psocrypto" }
psomsg_patch = { path = "../psomsg_patch" }
psoserial = { path = "../psoserial" }
rand = "0.3"
byteorder = "0.5"
encoding = "0.2"
log = "0.3"
env_logger = "0.3"
tokio-core = { git = "https://github.com/tokio-rs/tokio-core", rev = "623ce44" }
futures = "0.1"